add documentation, debug for devtools test and check, add more package requirements such as license.md

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,18 @@
 ^LPJmLDataCalc\.Rproj$
 ^\.Rproj\.user$
+^LICENSE\.md$
+^CONTRIBUTING\.md$
+^INSTALL\.md$
+^\.github$
+^\.buildlibrary$
+^\.pre-commit-config\.yaml$
+^Makefile$
+^workflow$
+^.lintr$
+^tests/.lintr$
+^vignettes/.lintr$
+^.*\.zenodo.json$
+^codecov\.yml$
+^CRAN-SUBMISSION$
+^cran-comments\.md$
+^.*CITATION.cff$
