--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,21 @@ S3method("*",LPJmLDataCalc)
 S3method("+",LPJmLDataCalc)
 S3method("-",LPJmLDataCalc)
 S3method("/",LPJmLDataCalc)
+S3method(subset,LPJmLDataCalc)
 export(LPJmLDataCalc)
+export(aggregate)
 export(as_LPJmLDataCalc)
+export(read_io)
+export(read_lpjml_grid_default)
+export(read_lpjml_region_cow)
+export(read_lpjml_region_global_land)
 import(lpjmlkit)
+importFrom(Matrix,Matrix)
+importFrom(Matrix,colSums)
+importFrom(Matrix,sparseMatrix)
+importFrom(abind,abind)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
 importFrom(units,set_units)
+importFrom(utils,read.csv)
