--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,13 @@ S3method("-",LPJmLDataCalc)
 S3method("/",LPJmLDataCalc)
 S3method(subset,LPJmLDataCalc)
 export(.as_LPJmLDataCalc)
+export(GlobalSumTimeAvg)
+export(GlobalSumTimeSer)
 export(LPJmLDataCalc)
+export(Metric)
+export(TimeAvg)
 export(aggregate)
+export(benchmark)
 export(read_cow_regions)
 export(read_def_grid)
 export(read_io)
@@ -16,9 +21,16 @@ importFrom(Matrix,Matrix)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(abind,abind)
+importFrom(jsonlite,fromJSON)
+importFrom(memoise,forget)
+importFrom(memoise,memoise)
 importFrom(methods,as)
+importFrom(rlang,hash)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
 importFrom(units,set_units)
+importFrom(utils,capture.output)
+importFrom(utils,head)
 importFrom(utils,read.csv)
+importFrom(utils,tail)
