added plotting and reporting functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,25 +6,39 @@ S3method("-",LPJmLDataCalc)
 S3method("/",LPJmLDataCalc)
 S3method(subset,LPJmLDataCalc)
 export(.as_LPJmLDataCalc)
-export(GlobalSumTimeAvg)
-export(GlobalSumTimeSer)
+export(GlobAvgAnnAvgTimeseries)
+export(GlobAvgTimeAvgTable)
+export(GlobAvgTimeseries)
+export(GlobSumAnnAvgTimeseries)
+export(GlobSumAnnTimeseriesFPC)
+export(GlobSumAnnTimeseriesPFT_harvest)
+export(GlobSumTimeAvgFPC)
+export(GlobSumTimeAvgPFT_harvest)
+export(GlobSumTimeAvgTable)
+export(GlobSumTimeseries)
 export(LPJmLDataCalc)
 export(Metric)
-export(TimeAvg)
+export(TimeAvgMap)
 export(aggregate)
 export(benchmark)
+export(create_pdf_report)
+export(default_settings)
+export(get_benchmark_meta_data)
 export(read_cow_regions)
 export(read_def_grid)
 export(read_io)
+export(set_lpjmlstats_settings)
 import(lpjmlkit)
 importFrom(Matrix,Matrix)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(abind,abind)
+importFrom(dplyr,"%>%")
 importFrom(jsonlite,fromJSON)
 importFrom(memoise,forget)
 importFrom(memoise,memoise)
 importFrom(methods,as)
+importFrom(rlang,.data)
 importFrom(rlang,hash)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
