--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,9 @@ Description: This package provides statistical tools for LPJmL data analysis
 License: AGPL-3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports:
+    dplyr,
     units,
     lpjmlkit,
     Matrix,
@@ -17,9 +18,22 @@ Imports:
     methods,
     memoise,
     rlang,
-    jsonlite
+    jsonlite,
+    stringr,
+    rmarkdown,
+    knitr,
+    colorspace,
+    ggplot2,
+    kableExtra,
+    patchwork,
+    tibble,
+    cli
 Suggests: 
     testthat (>= 3.0.0),
     raster,
-    maps
+    maps,
+    sf
 Config/testthat/edition: 3
+VignetteBuilder: knitr
+Depends:
+    R (>= 3.5.0)
