metric option year_range, report prio

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(GlobAvgTimeseries)
 export(GlobSumAnnAvgTimeseries)
 export(GlobSumAnnTimeseriesFPC)
 export(GlobSumAnnTimeseriesPFT_harvest)
-export(GlobSumTimeAvgFPC)
-export(GlobSumTimeAvgPFT_harvest)
+export(GlobSumTimeAvgTableFPC)
+export(GlobSumTimeAvgTablePFT_harvest)
 export(GlobSumTimeAvgTable)
 export(GlobSumTimeseries)
 export(LPJmLDataCalc)
