fix of pathwork /p/projects/landuse/users/davidho/test_new_benchmarking/lpjmlstats /p/projects/landuse/users/davidho/test_new_benchmarking/lpjmlstats problem by import of patchwork

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(read_def_grid)
 export(read_io)
 export(set_lpjmlstats_settings)
 import(lpjmlkit)
+import(patchwork)
 importFrom(Matrix,Matrix)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparseMatrix)
