--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(GlobSumTimeseries)
 export(LPJmLDataCalc)
 export(Metric)
 export(TimeAvgMap)
+export(TimeAvgMapPlusBase)
 export(aggregate)
 export(benchmark)
 export(create_pdf_report)
@@ -34,8 +35,8 @@ importFrom(Matrix,Matrix)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(abind,abind)
-importFrom(dplyr,"%>%")
 importFrom(jsonlite,fromJSON)
+importFrom(magrittr,"%>%")
 importFrom(memoise,forget)
 importFrom(memoise,memoise)
 importFrom(methods,as)
