--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method("-",LPJmLDataCalc)
 S3method("/",LPJmLDataCalc)
 S3method(subset,LPJmLDataCalc)
 export(.as_LPJmLDataCalc)
+export(CellSubsetAnnAvgTimeseries)
+export(CellSubsetTimeseries)
 export(GlobAvgAnnAvgTimeseries)
 export(GlobAvgTimeAvgTable)
 export(GlobAvgTimeseries)
@@ -19,6 +21,7 @@ export(GlobSumTimeseries)
 export(LPJmLDataCalc)
 export(Metric)
 export(TimeAvgMap)
+export(TimeAvgMapWithAbs)
 export(aggregate)
 export(benchmark)
 export(create_pdf_report)
@@ -33,14 +36,17 @@ import(patchwork)
 importFrom(Matrix,Matrix)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparseMatrix)
+importFrom(R6,R6Class)
 importFrom(abind,abind)
 importFrom(dplyr,"%>%")
 importFrom(jsonlite,fromJSON)
 importFrom(memoise,forget)
 importFrom(memoise,memoise)
 importFrom(methods,as)
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,hash)
+importFrom(tidyselect,matches)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
 importFrom(units,drop_units)
