--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,6 @@ importFrom(Matrix,Matrix)
 importFrom(Matrix,colSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
-importFrom(abind,abind)
 importFrom(dplyr,"%>%")
 importFrom(jsonlite,fromJSON)
 importFrom(memoise,forget)
@@ -46,6 +45,7 @@ importFrom(methods,as)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,hash)
+importFrom(rnaturalearth,ne_countries)
 importFrom(tidyselect,matches)
 importFrom(units,as_units)
 importFrom(units,deparse_unit)
