add_litvalue_table__use_raster geom, add error for nonexisting metric options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(TimeAvgMap)
 export(TimeAvgMapWithAbs)
 export(aggregate)
 export(benchmark)
+export(create_literature_pdf)
 export(create_pdf_report)
 export(default_settings)
 export(get_benchmark_meta_data)
