running lucode2::buildLibrary(), incrementing to version 0.6.0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(GlobSumTimeseries)
 export(LPJmLDataCalc)
 export(Metric)
 export(TimeAvgMap)
+export(TimeAvgMapTreeCover)
 export(TimeAvgMapWithAbs)
 export(aggregate)
 export(benchmark)
