--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: lpjmlstats
 Title: Statistical tools for LPJmL data analysis
-Version: 0.7.0
+Version: 0.5.0
 Authors@R: c(
     person("David","Hötten", , "davidho@pik-potsdam.de", role = c("aut", "cre")),
-    person("Jannes","Breier", , "jannes.breier@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0002-9055-6904")),
-    person("Christoph","Müller", , "cmueller@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0002-9491-3550"))
+    person("Jannes","Breier", , "jannes.breier@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0002-9055-6904"))
   )
 Description: This package provides statistical tools for LPJmL data analysis
     to be used for benchmarking LPJmL outputs.
@@ -45,4 +44,4 @@ Config/testthat/edition: 3
 VignetteBuilder: knitr
 Depends:
     R (>= 3.5.0)
-Date: 2024-11-08
+Date: 2024-10-18
