--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Title: Statistical tools for LPJmL data analysis
 Version: 0.6.0
 Authors@R: c(
     person("David","Hötten", , "davidho@pik-potsdam.de", role = c("aut", "cre")),
-    person("Jannes","Breier", , "jannes.breier@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0002-9055-6904"))
+    person("Jannes","Breier", , "jannes.breier@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0002-9055-6904")),
+    person("Christoph","Müller", , "cmueller@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0002-9491-3550"))
   )
 Description: This package provides statistical tools for LPJmL data analysis
     to be used for benchmarking LPJmL outputs.
