--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method("*",LPJmLDataCalc)
 S3method("+",LPJmLDataCalc)
 S3method("-",LPJmLDataCalc)
 S3method("/",LPJmLDataCalc)
-S3method(subset,LPJmLDataCalc)
 export(.as_LPJmLDataCalc)
 export(CellSubsetAnnAvgTimeseries)
 export(CellSubsetTimeseries)
@@ -31,8 +30,9 @@ export(default_settings)
 export(get_benchmark_meta_data)
 export(read_cow_regions)
 export(read_def_grid)
-export(read_io)
+export(read_io_calc)
 export(set_lpjmlstats_settings)
+export(subset_calc)
 import(lpjmlkit)
 import(patchwork)
 importFrom(Matrix,Matrix)
