use knitr escape_latex, rename and redefine subset

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("*",LPJmLDataCalc)
 S3method("+",LPJmLDataCalc)
 S3method("-",LPJmLDataCalc)
 S3method("/",LPJmLDataCalc)
+S3method(subset,LPJmLDataCalc)
 export(.as_LPJmLDataCalc)
 export(CellSubsetAnnAvgTimeseries)
 export(CellSubsetTimeseries)
@@ -32,7 +33,6 @@ export(read_cow_regions)
 export(read_def_grid)
 export(read_io_calc)
 export(set_lpjmlstats_settings)
-export(subset_calc)
 import(lpjmlkit)
 import(patchwork)
 importFrom(Matrix,Matrix)
