added partial argument matching to aceppted warnings, run buildLibrary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(units,deparse_unit)
 importFrom(units,drop_units)
 importFrom(units,set_units)
 importFrom(utils,capture.output)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,tail)
