--- a/inst/ilamb/sample.cfg
+++ b/inst/ilamb/sample.cfg
@@ -5,6 +5,22 @@ variable = "gpp"
 [WECANN]
 source  = "DATA/gpp/WECANN/gpp.nc"
 
+[h2: nee]
+variable = "nee"
+derived = "rh - npp"
+[FLUXNET2015]
+source = "DATA/nee/FLUXNET2015/nee.nc"
+[FLUXCOM]
+source = "DATA/nee/FLUXCOM/nee.nc"
+
+[h2: biomass]
+variable = "biomass"
+derived = "vegc"
+# [THURNER]
+# source = "DATA/biomass/Thurner/biomass_0.5x0.5.nc"
+[ESACCI]
+source = "DATA/biomass/ESACCI/biomass.nc"
+
 [h2: et]
 variable = "et"
 derived = "transp + evap"
