Added get plot functtion and tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(create_literature_pdf)
 export(create_pdf_report)
 export(default_settings)
 export(get_benchmark_meta_data)
+export(get_plot)
 export(read_cow_regions)
 export(read_def_grid)
 export(read_io_calc)
