Added R function for bin2cdf conversion

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,14 +37,14 @@ Imports:
     tidyselect,
     R6,
     rnaturalearth
-Suggests: 
+Suggests:
     testthat (>= 3.0.0),
     maps,
     sf,
-    covr
+    covr,
+    ncdf4
 Config/testthat/edition: 3
 VignetteBuilder: knitr
 Depends:
     R (>= 3.5.0)
 Date: 2026-02-05
-BinaryFiles: inst/bin2cdf
