--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(TimeAvgMapTreeCover)
 export(TimeAvgMapWithAbs)
 export(aggregate)
 export(benchmark)
+export(bin2cdf)
 export(create_literature_pdf)
 export(create_pdf_report)
 export(default_settings)
@@ -42,6 +43,8 @@ importFrom(Matrix,sparseMatrix)
 importFrom(R6,R6Class)
 importFrom(dplyr,"%>%")
 importFrom(jsonlite,fromJSON)
+importFrom(lpjmlkit,read_io)
+importFrom(lpjmlkit,read_meta)
 importFrom(memoise,forget)
 importFrom(memoise,memoise)
 importFrom(methods,as)
